--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -16,6 +16,14 @@
         <h5 class="card-title">TinyURL for: <%= longURL %></h5>
         <p class="card-text">Short URL: <a href="/u/<%= shortURL %>"><%= shortURL %></a></p>
       </div>
+
+      <form method="POST", action="/urls/<%= shortURL %>">
+        <label>New URL</label>
+        <input name="New URL">
+        <br>
+        <button type = "submit">Update URL</button>
+      </form>
+
     <div class="card-footer text-muted"></div>
   </div>
   <!-- Bootstrap JS -->
