--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -1,4 +1,4 @@
-<!--render info for a single URL-->
+<!--single URL-->
 
 <!DOCTYPE html>
 <html lang="en">
@@ -18,8 +18,8 @@
       </div>
 
       <form method="POST", action="/urls/<%= shortURL %>">
-        <label>New URL</label>
-        <input name="New URL">
+        <label>longURL</label>
+        <input name="longURL">
         <br>
         <button type = "submit">Update URL</button>
       </form>
