--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -11,7 +11,10 @@
       </div>
     </div>
     <% if (username) { %>
-        You are logged in as <%= username %>
+        Logged in as: <%= username %>
+        <form method="POST", action="/logout">
+          <button type = "submit">Log Out</button>
+        </form>
       <% } else { %>
     <form method="POST", action="/login">
       <label>Name</label>
