--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -10,8 +10,8 @@
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
       </div>
     </div>
-    <% if (username) { %>
-        Logged in as: <%= username %>
+    <% if (user) { %>
+        Logged in as: <%= user.email %>
         <form method="POST", action="/logout">
           <button type = "submit">Log Out</button>
         </form>
