--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -10,18 +10,22 @@
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
       </div>
     </div>
-    <% if (user) { %>
+    <!-- <% if (user) { %>
         Logged in as: <%= user.email %>
         <form method="POST", action="/logout">
           <button type = "submit">Log Out</button>
         </form>
       <% } else { %>
     <form method="POST", action="/login">
-      <label>Name</label>
-      <input name="username">
-      <button type = "submit">Sign In</button>
+      <button type = "submit">Log In</button>
     </form>
-    <% } %>
+    <% } %> -->
+    <form method ="GET" action="/login">
+      <button type = "submit">Log In</button>
+    </form>
+    <form method ="GET" action="/register">
+      <button type = "submit">Register</button>
+    </form>
   </nav>
 </header>
 
