--- a/views/login.ejs
+++ b/views/login.ejs
@@ -14,7 +14,7 @@
     <input name="email">
     <label type="password">password</label>
     <input name="password">
-    <button type = "submit">Register</button>
+    <button type = "submit">Log In</button>
   </form>
    <!-- Bootstrap JS -->
    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
