add header to register and log in pages, fix export/inport of functions, clean up functions

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -9,6 +9,7 @@
     <title>Log In</title>
   </head>
 <body>
+  <%- include('partials/_header') %>
   <form method="POST", action="/login">
     <label type =email>email</label>
     <input name="email">
