--- a/views/register.ejs
+++ b/views/register.ejs
@@ -9,6 +9,7 @@
     <title>Register</title>
 </head>
 <body>
+  <%- include('partials/_header') %>
   <form method="POST", action="/register">
     <label type =email>email</label>
     <input name="email">
