--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -26,10 +26,11 @@
         <% for(let url in urls) { %>
           <tr>
             <td><%= url %></td>
-            <td><%= urls[url] %></td>
-            <td><form action="urls/<%= url %>">
+            <td><%= urls[url].longURL %></td>
+            <td><form action="/urls/<%= url %>">
               <button>Edit
-              </button></td>
+              </button>
+            </form></td>
             <td>
               <form method="POST" action="/urls/<%= url %>/delete">
                 <button type = "submit">Delete
