rework the redirect page

--- a/views/redirect.ejs
+++ b/views/redirect.ejs
@@ -10,6 +10,7 @@
 </head>
 <body>
   <%- include('partials/_header') %>
+  <H2>Welcome to TinyApp!</H2>
   <p>Please register or log in.</p>
 </body>
 </html>
