redirect to login page when not logged in

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -10,6 +10,8 @@
   </head>
 <body>
   <%- include('partials/_header') %>
+  <H2>Welcome to TinyApp!</H2>
+  <p>Please log in below or register 🪐.</p>
   <form method="POST", action="/login">
     <label type =email>email</label>
     <input name="email">
